change config to point to production api

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <div class="log" id="log"></div>
     </div>
 
+    <script src="config.js"></script>
     <script src="script.js"></script>
 </body>
 
